# Wincraft

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
fabric/: build.gradle
fabric/src/main/java/com/wincraft/: Wincraft.java
fabric/src/main/java/com/wincraft/client/: InputCaptureController.java  InputForwarder.java  WincraftClient.java  WindowInputCoords.java
fabric/src/main/java/com/wincraft/client/gui/: WindowLauncherScreen.java  WindowManagerScreen.java
fabric/src/main/java/com/wincraft/client/render/: WincraftWorldRenderer.java
fabric/src/main/java/com/wincraft/item/: ModComponents.java  ModItems.java  WindowItemData.java  WindowSpawnerItem.java
fabric/src/main/java/com/wincraft/mixin/: KeyboardHandlerMixin.java  KeyboardMixin.java  MouseHandlerMixin.java  MouseMixin.java
fabric/src/main/java/com/wincraft/native/: InputMode.java  VirtualKeyMap.java  WincraftNative.java  WindowHandle.java
fabric/src/main/java/com/wincraft/natives/: InputMode.java  VirtualKeyMap.java  WincraftNative.java  WindowHandle.java
fabric/src/main/java/com/wincraft/window/: CapturedWindow.java  WindowManager.java
fabric/src/main/resources/: fabric.mod.json  wincraft.mixins.json
fabric/src/main/resources/assets/wincraft/items/: window_spawner.json
fabric/src/main/resources/assets/wincraft/lang/: en_us.json
native/: Cargo.toml  build.ps1
native/src/: capture.rs  enumerate.rs  input.rs  jni_bridge.rs  lib.rs  session.rs
(+1 files in other folders)
