[package]
name = "wincraft"
version = "0.1.0"
edition = "2021"

[lib]
name = "wincraft"
# cdylib -> produces wincraft.dll for JNI to load
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
once_cell = "1.19"
parking_lot = "0.12"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Foundation",
]

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
